Agregar parrafos y títulos

--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
         <title> Mi perfil personal </title>
     </head>
     <body>
-        Bienvenido a mi perfil :P
+        <h1>SWANKGOSLING696</h1>
+        <p> Bienvenidos a mi perfil personal donde contaré más de mi. Considerenlo como un proyecto personal y una carta de presentación mia. :p </p>
+        <h2>Perfil Personal</h2>
+        <p> Sección donde presentaré mis gustos y actividades personales :p</p>
+        <h2>Perfil de contacto </h2>
+        <p>Sección donde presentaré mis cuentas :p</p>
     </body>
-</html>
+</html> 
