--- a/index.html
+++ b/index.html
@@ -1,14 +1,44 @@
 <!DOCTYPE html>
 <html>
     <head> 
-        <title> Mi perfil personal </title>
+        <title> Swank696 | Perfil Personal </title>
     </head>
     <body>
         <h1>SWANKGOSLING696</h1>
         <p> Bienvenidos a mi perfil personal donde contaré más de mi. Considerenlo como un proyecto personal y una carta de presentación mia. :p </p>
-        <h2>Perfil Personal</h2>
-        <p> Sección donde presentaré mis gustos y actividades personales :p</p>
-        <h2>Perfil de contacto </h2>
-        <p>Sección donde presentaré mis cuentas :p</p>
+
+        <ul>
+            
+        <li>
+            <h2>Perfil Personal</h2>
+            <p>Sección donde presentaré mis gustos y actividades personales :p</p>
+            <ul>
+                <li>
+                    <h3>Música</h3>
+                    <p>La musica fue y será el factor más importante de mi vida || ¿El cuarto arte? </p>
+                </li>
+                <li>
+                    <h3>Películas y Series</h3>
+                    <p>El Séptimo Arte</p>
+                </li>
+                <li>
+                    <h3>Los videojuegos</h3>
+                    <p>¿El Octavo Arte?</p>
+                </li>
+            </ul>
+        </li>
+
+        <li> 
+            <h2>Perfil de contacto </h2> 
+            <p>Sección donde presentaré mis cuentas :p</p>
+            <ul>
+                <li> Steam </li>
+                <li> Discord </li>
+                <li> Instagram </li>
+            </ul>
+        </li>
+
+        </ul>
+
     </body>
 </html> 
