Agregar enlaces en secciones

--- a/index.html
+++ b/index.html
@@ -16,29 +16,32 @@
                 <li>
                     <h3>Música</h3>
                     <p>La musica fue y será el factor más importante de mi vida || ¿El cuarto arte? </p>
+                    <a href="albumes.html" title="Sección de albumes escuchados">Los albumes que he escuchado</a>
                 </li>
+
                 <li>
                     <h3>Películas y Series</h3>
                     <p>El Séptimo Arte</p>
+                    <a href="peliculas.html" title="Sección de peliculas vistas">Las peliculas que he visto</a>
                 </li>
+
                 <li>
                     <h3>Los videojuegos</h3>
                     <p>¿El Octavo Arte?</p>
+                    <a href="juegos.html" title="Sección de juegos jugados">Los juegos que he jugado</a>
                 </li>
             </ul>
         </li>
 
         <li> 
             <h2>Perfil de contacto </h2> 
-            <p>Sección donde presentaré mis cuentas :p</p>
+            <p>Sección donde presentaré mis cuentas </p>
             <ul>
-                <li> Steam </li>
-                <li> Discord </li>
-                <li> Instagram </li>
+                <li><a href="https://steamcommunity.com/id/SwankGosling696/" title="Perfil de Steam" target="_blank">Steam</a></li>
+                <li><a href="https://www.instagram.com/luissss696/" title="Perfil de Instagram" target="_blank">Instagram</a></li>
+                <li><a href="https://github.com/Fernandowdd" title="Perfil de GitHub" target="_blank">GitHub</a></li>
             </ul>
         </li>
-
         </ul>
-
     </body>
 </html> 
