Agregar imagenes para Index y parte de películas

--- a/albumes.html
+++ b/albumes.html
@@ -7,8 +7,18 @@
     <a href="index.html" title="Volver al menú principal">Menú principal</a>
     <h1>ALBUMES | SWANK696</h1>
     <h2>Albumes favoritos</h2>
-    <p>insertar images</p>
+    <ul>
+        <li> <img src="" alt=""> </li>
+        <li> <img src="" alt=""> </li>
+        <li> <img src="" alt=""> </li>
+        <li> <img src="" alt=""> </li>
+    </ul>
     <h2>Albumes escuchados</h2>
-    <p>insertar images</p>
+    <ul>
+        <li> <img src="" alt=""> </li>
+        <li> <img src="" alt=""> </li>
+        <li> <img src="" alt=""> </li>
+        <li> <img src="" alt=""> </li>
+    </ul>
 </body>
 </html>
