--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     </head>
     <body>
         <h1>SWANKGOSLING696</h1>
+        <img src="Imagenes/Profile1.jpeg" alt="Foto de perfil">
         <p> Bienvenidos a mi perfil personal donde contaré más de mi. Considerenlo como un proyecto personal y una carta de presentación mia. :p </p>
 
         <ul>
-            
+
         <li>
             <h2>Perfil Personal</h2>
             <p>Sección donde presentaré mis gustos y actividades personales :p</p>
@@ -16,18 +17,21 @@
                 <li>
                     <h3>Música</h3>
                     <p>La musica fue y será el factor más importante de mi vida || ¿El cuarto arte? </p>
+                    <img src="Imagenes/MusicaPrincipal.jpg" alt="Presentación música">
                     <a href="albumes.html" title="Sección de albumes escuchados">Los albumes que he escuchado</a>
                 </li>
 
                 <li>
                     <h3>Películas y Series</h3>
                     <p>El Séptimo Arte</p>
+                    <img src="Imagenes/PeliculaPrincipal.jpg" alt="Presentación películas">
                     <a href="peliculas.html" title="Sección de peliculas vistas">Las peliculas que he visto</a>
                 </li>
 
                 <li>
                     <h3>Los videojuegos</h3>
                     <p>¿El Octavo Arte?</p>
+                    <img src="Imagenes/ViejuegosPrincipal.jpg" alt="Presentación Videojuegos">
                     <a href="juegos.html" title="Sección de juegos jugados">Los juegos que he jugado</a>
                 </li>
             </ul>
@@ -37,9 +41,18 @@
             <h2>Perfil de contacto </h2> 
             <p>Sección donde presentaré mis cuentas </p>
             <ul>
-                <li><a href="https://steamcommunity.com/id/SwankGosling696/" title="Perfil de Steam" target="_blank">Steam</a></li>
-                <li><a href="https://www.instagram.com/luissss696/" title="Perfil de Instagram" target="_blank">Instagram</a></li>
-                <li><a href="https://github.com/Fernandowdd" title="Perfil de GitHub" target="_blank">GitHub</a></li>
+                <li>
+                    <a href="https://steamcommunity.com/id/SwankGosling696/" title="Perfil de Steam" target="_blank">Steam</a>
+                    <img src="Imagenes/SteamLogo.png" alt="Perfil de Steam">
+                </li>
+                <li>
+                    <a href="https://www.instagram.com/luissss696/" title="Perfil de Instagram" target="_blank">Instagram</a>
+                    <img src="Imagenes/InstagramLogo.png" alt="Perfil de Instagram">
+                </li>
+                <li>
+                    <a href="https://github.com/Fernandowdd" title="Perfil de GitHub" target="_blank">GitHub</a>
+                    <img src="Imagenes/GithubLogo.png" alt="Perfil de Github">
+                </li>
             </ul>
         </li>
         </ul>
