--- a/juegos.html
+++ b/juegos.html
@@ -7,8 +7,18 @@
     <a href="index.html" title="Volver al menú principal">Menú principal</a>
     <h1>VIDEOJUEGOS | SWANK696</h1>
     <h2>Videojuegos Favoritos</h2>
-    <p>insertar images</p>
+    <ul>
+        <li> <img src="" alt=""> </li>
+        <li> <img src="" alt=""> </li>
+        <li> <img src="" alt=""> </li>
+        <li> <img src="" alt=""> </li>
+    </ul>
     <h2>Videojuegos Jugados</h2>
-    <p>insertar images</p>
+    <ul>
+        <li> <img src="" alt=""> </li>
+        <li> <img src="" alt=""> </li>
+        <li> <img src="" alt=""> </li>
+        <li> <img src="" alt=""> </li>
+    </ul>
 </body>
 </html>
