--- a/peliculas.html
+++ b/peliculas.html
@@ -7,8 +7,19 @@
     <a href="index.html" title="Volver al menú principal">Menú principal</a>
     <h1>Películas | SWANK696</h1>
     <h2>Peliculas favoritas</h2>
-    <p>insertar images</p>
-    <h2>Peliculas favoritas</h2>
-    <p>insertar images</p>
+    <ul> 
+    <li> <img src="Imagenes/Seven Samurai.jpg" alt="Seven Samurai"> </li>
+    <li> <img src="Imagenes/ApocalypseNow.jpg" alt="Apocalypse Now"></li>
+    <li> <img src="Imagenes/CityOfGod.jpg" alt="City of God"></li>
+    <li> <img src="Imagenes/Harakiri.jpg" alt=" Harakiri"></li>
+    </ul>
+
+    <h2>Peliculas Vistas</h2>
+    <ul>
+        <li> <img src="" alt=""> </li>
+        <li> <img src="" alt=""> </li>
+        <li> <img src="" alt=""> </li>
+        <li> <img src="" alt=""> </li>
+    </ul>
 </body>
 </html>
