--- a/albumes.html
+++ b/albumes.html
@@ -8,10 +8,10 @@
     <h1>ALBUMES | SWANK696</h1>
     <h2>Albumes favoritos</h2>
     <ul>
-        <li> <img src="" alt=""> </li>
-        <li> <img src="" alt=""> </li>
-        <li> <img src="" alt=""> </li>
-        <li> <img src="" alt=""> </li>
+        <li> <img src="Imagenes/ACourtOfAKingCrimsonPortada.jpeg" alt="A Court of a King Crimsom"> </li>
+        <li> <img src="Imagenes/AHardDaysNightPortada.jpg" alt="A Hard Days Night"> </li>
+        <li> <img src="Imagenes/Astroworld.jpeg" alt="Astroworld"> </li>
+        <li> <img src="Imagenes/PortadaMmmFood.jpeg" alt="Hmm...Food"> </li>
     </ul>
     <h2>Albumes escuchados</h2>
     <ul>
