--- a/juegos.html
+++ b/juegos.html
@@ -15,10 +15,8 @@
     </ul>
     <h2>Videojuegos Jugados</h2>
     <ul>
-        <li> <img src="" alt=""> </li>
-        <li> <img src="" alt=""> </li>
-        <li> <img src="" alt=""> </li>
-        <li> <img src="" alt=""> </li>
+        <li> <img src="Imagenes/Dispatch.jpg" alt=""> </li>
+        <li> <img src="Imagenes/Minecraft.jpeg" alt=""> </li>
     </ul>
 </body>
 </html>
